snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.pom.sha1
8d0bdeb20c7ff93a00b4ccb687dbfefb323d2db2